--- a/src/page-2.html
+++ b/src/page-2.html
@@ -57,62 +57,47 @@
             <!-- Content -->
             <div class="uk-container" uk-margin="margin: uk-margin-top">
 
-                <!--new game-->
+                <!--game statistic-->
                 <div class="tm-box-large tm-background-top uk-border-rounded">
-                    <div class="uk-flex-bottom" uk-grid>
+                    <div class="uk-child-width-1-3@m" uk-grid>
                         <div>
-                            <h2>Создать <br>
-                                новую игру
-                            </h2>
+                            <h2>Ставки за сутки</h2>
+                            <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
+                            <div><span>16800</span> ставок</div>
                         </div>
 
-                        <!--type-->
                         <div>
-                            <h3>Тип игры</h3>
-                            <div class="uk-grid-small" uk-grid>
-                                <div>
-                                    <select>
-                                        <option>Приватная</option>
-                                        <option>Другая</option>
-                                        <option>Другая</option>
-                                    </select>
-                                </div>
-
-                                <div>
-                                    <button type="button" class="tm-button-whitelist uk-button uk-button-default">
-                                        <i class="fa fa-plus uk-margin-right" aria-hidden="true"></i>
-                                        Whitelist
-                                    </button>
-                                </div>
-                            </div>
+                            <h2>Джекпот</h2>
+                            <div class="bet">21.050 <sup class="uk-text-uppercase">eth</sup></div>
+                            <div>Выиграл <span>0x7a4ca7</span></div>
                         </div>
 
-                        <!--new-->
                         <div>
-                            <div class="uk-flex-bottom" uk-grid>
-                                <div>
-                                    <h3>Сумма ставки</h3>
-                                    <div>
-                                        <div class="uk-inline">
-                                            <span class="uk-form-icon uk-form-icon-flip">eth</span>
-                                            <input class="tm-input-top uk-input uk-background-secondary" type="text" value="0.0001">
-                                        </div>
+                            <h2>Лидеры</h2>
+                            <ul class="tm-leader-list uk-list">
+                                <li>
+                                    <div class="uk-flex uk-flex-between">
+                                        <div>0x828gfg235235b8</div>
+                                        <div>21.050 <span class="uk-text-uppercase">eth</span></div>
                                     </div>
-                                </div>
-
-                                <div>
-                                    <h3>Макс. кол-во игроков</h3>
-                                    <div>
-                                        <input class="tm-input-top uk-input uk-background-secondary uk-text-center" type="text" value="10">
+                                </li>
+                                <li>
+                                    <div class="uk-flex uk-flex-between">
+                                        <div>0x828gfg235235b8</div>
+                                        <div>21.050 <span class="uk-text-uppercase">eth</span></div>
                                     </div>
-                                </div>
-
-                                <div>
-                                    <button type="button" class="tm-button-tertiary uk-button">Играть</button>
-                                </div>
-                            </div>
+                                </li>
+                                <li>
+                                    <div class="uk-flex uk-flex-between">
+                                        <div>0x828gfg235235b8</div>
+                                        <div>21.050 <span class="uk-text-uppercase">eth</span></div>
+                                    </div>
+                                </li>
+                            </ul>
 
                         </div>
+
+
 
                     </div>
                 </div>
@@ -206,116 +191,186 @@
                             </div>
                         </div>
 
-                        <!-- game cards -->
+                        <!-- game cards (small cards)-->
                         <div class="">
-                            <div class="uk-child-width-1-3@s uk-child-width-1-5@m" uk-grid>
+                            <div class="uk-child-width-1-2@m" uk-grid>
 
-                                <!--card-->
+                                <!--card small-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
-                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                        <div class="uk-card-body">
                                             <h3>Игроки</h3>
                                             <div>
                                                 <span>2</span> из <span>5</span>
                                             </div>
                                         </div>
 
-                                        <div class="uk-card-footer">
-                                            <h3 class="tm-title-marked">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
+                                        <div class="uk-card-footer uk-width-auto@s">
+                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                                <div>
+                                                    <h3>Тип игры</h3>
+                                                    <div class="tm-game-type-marker">Приватная</div>
+                                                </div>
+
+                                                <div>
+                                                    <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
 
-                                <!--card-->
+                                <!--card small-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">2.4500<sup class="uk-text-uppercase">eth</sup></div>
+                                            <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
-                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                        <div class="uk-card-body">
                                             <h3>Игроки</h3>
                                             <div>
                                                 <span>2</span> из <span>5</span>
                                             </div>
                                         </div>
 
-                                        <div class="uk-card-footer">
-                                            <h3 class="tm-title-marked">Открытая игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
+                                        <div class="uk-card-footer uk-width-auto@s">
+                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                                <div>
+                                                    <h3>Тип игры</h3>
+                                                    <div class="tm-game-type-marker">Приватная</div>
+                                                </div>
+
+                                                <div>
+                                                    <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
 
-                                <!--card-->
+                                <!--card small-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">0.0009<sup class="uk-text-uppercase">eth</sup></div>
+                                            <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
-                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                        <div class="uk-card-body">
                                             <h3>Игроки</h3>
                                             <div>
                                                 <span>2</span> из <span>5</span>
                                             </div>
                                         </div>
 
-                                        <div class="uk-card-footer">
-                                            <h3 class="tm-title-marked">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
+                                        <div class="uk-card-footer uk-width-auto@s">
+                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                                <div>
+                                                    <h3>Тип игры</h3>
+                                                    <div class="tm-game-type-marker">Приватная</div>
+                                                </div>
+
+                                                <div>
+                                                    <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
 
-                                <!--card-->
+                                <!--card small-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">1.0000<sup class="uk-text-uppercase">eth</sup></div>
+                                            <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
-                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                        <div class="uk-card-body">
                                             <h3>Игроки</h3>
                                             <div>
                                                 <span>2</span> из <span>5</span>
                                             </div>
                                         </div>
 
-                                        <div class="uk-card-footer">
-                                            <h3 class="tm-title-marked">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
+                                        <div class="uk-card-footer uk-width-auto@s">
+                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                                <div>
+                                                    <h3>Тип игры</h3>
+                                                    <div class="tm-game-type-marker">Приватная</div>
+                                                </div>
+
+                                                <div>
+                                                    <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
 
-                                <!--card-->
+                                <!--card small-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">0.0500<sup class="uk-text-uppercase">eth</sup></div>
+                                            <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
-                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                        <div class="uk-card-body">
                                             <h3>Игроки</h3>
                                             <div>
                                                 <span>2</span> из <span>5</span>
                                             </div>
                                         </div>
 
-                                        <div class="uk-card-footer">
-                                            <h3 class="tm-title-marked">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
+                                        <div class="uk-card-footer uk-width-auto@s">
+                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                                <div>
+                                                    <h3>Тип игры</h3>
+                                                    <div class="tm-game-type-marker">Приватная</div>
+                                                </div>
+
+                                                <div>
+                                                    <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--card small-->
+                                <div>
+                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
+                                        <div class="uk-card-header">
+                                            <h3>Ставка</h3>
+                                            <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
+                                        </div>
+
+                                        <div class="uk-card-body">
+                                            <h3>Игроки</h3>
+                                            <div>
+                                                <span>2</span> из <span>5</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="uk-card-footer uk-width-auto@s">
+                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                                <div>
+                                                    <h3>Тип игры</h3>
+                                                    <div class="tm-game-type-marker">Приватная</div>
+                                                </div>
+
+                                                <div>
+                                                    <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
