--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -117,7 +117,7 @@
                     </div>
                 </div>
 
-                <!--my game-->
+                <!--my games-->
                 <div class="uk-border-rounded uk-background-primary">
                     <div class="tm-box-small uk-background-secondary">
                         <div class="uk-flex-bottom uk-flex-between" uk-grid>
@@ -331,7 +331,7 @@
 
                 </div>
 
-                <!--common game-->
+                <!--common games-->
                 <div class="uk-border-rounded uk-background-primary">
                     <div class="tm-box-small uk-background-secondary">
                         <div class="uk-flex-bottom uk-flex-between" uk-grid>
