--- a/src/page-2.html
+++ b/src/page-2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -97,12 +97,10 @@
 
                         </div>
 
-
-
                     </div>
                 </div>
 
-                <!--my game-->
+                <!--my games-->
                 <div class="uk-border-rounded uk-background-primary">
                     <div class="tm-box-small uk-background-secondary">
                         <div class="uk-flex-bottom uk-flex-between" uk-grid>
@@ -386,7 +384,7 @@
 
                 </div>
 
-                <!--common game-->
+                <!--common games-->
                 <div class="uk-border-rounded uk-background-primary">
                     <div class="tm-box-small uk-background-secondary">
                         <div class="uk-flex-bottom uk-flex-between" uk-grid>
