--- a/src/page-3.html
+++ b/src/page-3.html
@@ -67,7 +67,7 @@
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
-                                                <img src="images/icon-user.svg" alt="" uk-svg>
+                                                <img src="images/icon-user.png" alt="">
                                             </div>
 
                                             <div>
@@ -80,7 +80,7 @@
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
-                                                <img src="images/icon-bet.svg" alt="" uk-svg>
+                                                <img src="images/icon-bet.png" alt="">
                                             </div>
 
                                             <div>
@@ -93,7 +93,7 @@
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
-                                                <img src="images/icon-prize.svg" alt="" uk-svg>
+                                                <img src="images/icon-prize.png" alt="">
                                             </div>
 
                                             <div>
@@ -106,7 +106,7 @@
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
-                                                <img src="images/icon-lock.svg" alt="" uk-svg>
+                                                <img src="images/icon-lock.png" alt="">
                                             </div>
 
                                             <div>
@@ -127,42 +127,58 @@
 
                     <!--game body-->
                     <div class="tm-box-large tm-background-secondary">
-                        <div class="uk-child-width-1-3@m" uk-grid>
+                        <div class="uk-child-width-1-2@m" uk-grid
+                             uk-height-match="target: .tm-equal-height">
                             <div>
-                                <h2>Ставки за сутки</h2>
-                                <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
-                                <div><span>16800</span> ставок</div>
+                                <h2>Участники</h2>
+                                <div class="tm-equal-height">
+                                    <ul class="tm-leader-list uk-list">
+                                        <li class="tm-connected">
+                                            <div class="uk-flex uk-flex-between">
+                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div>1.5 <span class="uk-text-uppercase">eth</span></div>
+                                            </div>
+                                        </li>
+                                        <li class="tm-connected">
+                                            <div class="uk-flex uk-flex-between">
+                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div>1.5 <span class="uk-text-uppercase">eth</span></div>
+                                            </div>
+                                        </li>
+                                        <li class="tm-connected">
+                                            <div class="uk-flex uk-flex-between">
+                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div>1.5 <span class="uk-text-uppercase">eth</span></div>
+                                            </div>
+                                        </li>
+                                        <li class="tm-connected">
+                                            <div class="uk-flex uk-flex-between">
+                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div>1.5 <span class="uk-text-uppercase">eth</span></div>
+                                            </div>
+                                        </li>
+                                        <li class="tm-connected">
+                                            <div class="uk-flex uk-flex-between">
+                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div>1.5 <span class="uk-text-uppercase">eth</span></div>
+                                            </div>
+                                        </li>
+
+                                        <li class="tm-connected">
+                                            <div class="uk-flex uk-flex-between">
+                                                <div>Ожидаем игрока...</div>
+                                                <div><img src="images/icon-wait.svg" alt="" uk-svg></div>
+                                            </div>
+                                        </li>
+
+
+                                    </ul>
+                                </div>
                             </div>
 
                             <div>
-                                <h2>Джекпот</h2>
-                                <div class="bet">21.050 <sup class="uk-text-uppercase">eth</sup></div>
-                                <div>Выиграл <span>0x7a4ca7</span></div>
-                            </div>
-
-                            <div>
-                                <h2>Лидеры</h2>
-                                <ul class="tm-leader-list uk-list">
-                                    <li>
-                                        <div class="uk-flex uk-flex-between">
-                                            <div>0x828gfg235235b8</div>
-                                            <div>21.050 <span class="uk-text-uppercase">eth</span></div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="uk-flex uk-flex-between">
-                                            <div>0x828gfg235235b8</div>
-                                            <div>21.050 <span class="uk-text-uppercase">eth</span></div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="uk-flex uk-flex-between">
-                                            <div>0x828gfg235235b8</div>
-                                            <div>21.050 <span class="uk-text-uppercase">eth</span></div>
-                                        </div>
-                                    </li>
-                                </ul>
-
+                                <h2>Розыгрыш</h2>
+                                <div class="tm-equal-height"></div>
                             </div>
 
 
@@ -178,7 +194,7 @@
 
                                 <div class="uk-flex-middle uk-grid-small" uk-grid>
                                     <div>
-                                        <input class="uk-input" type="text" value="10">
+                                        <input class="uk-input" type="text" value="https://CryptoBets.com/b/hsкеуф%B8" readonly>
                                     </div>
 
                                     <div>
@@ -189,6 +205,13 @@
 
                             <div>
                                 <h2>Поделиться в соц. сетях</h2>
+                                <ul class="uk-iconnav uk-child-width-expand">
+                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-paper-plane" aria-hidden="true"></i></a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -356,6 +379,7 @@
     </div>
 
 </div>
+
 
 </body>
 </html>
