--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div class="uk-container" uk-margin="margin: uk-margin-top">
 
                 <!--new game-->
-                <div class="tm-box-large tm-background-top uk-border-rounded">
+                <div class="tm-box-large tm-top uk-border-rounded">
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
                             <h2>Создать <br>
@@ -95,7 +95,7 @@
                                     <div>
                                         <div class="uk-inline">
                                             <span class="uk-form-icon uk-form-icon-flip">eth</span>
-                                            <input class="tm-input-top uk-input uk-background-secondary" type="text" value="0.0001">
+                                            <input class="uk-input uk-background-secondary" type="text" value="0.0001">
                                         </div>
                                     </div>
                                 </div>
@@ -103,7 +103,7 @@
                                 <div>
                                     <h3>Макс. кол-во игроков</h3>
                                     <div>
-                                        <input class="tm-input-top uk-input uk-background-secondary uk-text-center" type="text" value="10">
+                                        <input class="uk-input uk-background-secondary uk-text-center" type="text" value="10">
                                     </div>
                                 </div>
 
@@ -118,11 +118,11 @@
                 </div>
 
                 <!--my game-->
-                <div class="uk-border-rounded uk-background-primary">
+                <div class="tm-games uk-border-rounded uk-background-primary">
                     <div class="tm-box-small uk-background-secondary">
                         <div class="uk-flex-bottom uk-flex-between" uk-grid>
                             <div>
-                                <h2 class="tm-fontweight-normal">Мои игры: <span class="tm-text-secondary">56</span></h2>
+                                <h2>Мои игры: <span class="tm-text-secondary">56</span></h2>
                             </div>
 
                             <div>
@@ -332,11 +332,11 @@
                 </div>
 
                 <!--common game-->
-                <div class="uk-border-rounded uk-background-primary">
+                <div class="tm-games uk-border-rounded uk-background-primary">
                     <div class="tm-box-small uk-background-secondary">
                         <div class="uk-flex-bottom uk-flex-between" uk-grid>
                             <div>
-                                <h2 class="tm-fontweight-normal">Доступно игр: <span class="tm-text-secondary">523</span></h2>
+                                <h2>Доступно игр: <span class="tm-text-secondary">523</span></h2>
                             </div>
 
                             <div>
