--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
                 <!--new game-->
                 <div class="tm-box-large tm-top uk-border-rounded">
-                    <div class="uk-flex-bottom" uk-grid>
+                    <div class="uk-flex-bottom uk-flex-between" uk-grid>
                         <div>
                             <h2>Создать <br>
                                 новую игру
@@ -71,7 +71,7 @@
                             <h3>Тип игры</h3>
                             <div class="uk-grid-small" uk-grid>
                                 <div>
-                                    <select>
+                                    <select class="tm-select-top uk-select" name="select-top">
                                         <option>Приватная</option>
                                         <option>Другая</option>
                                         <option>Другая</option>
@@ -136,7 +136,7 @@
                                             </div>
 
                                             <div>
-                                                <select>
+                                                <select class="tm-select-sort" name="select-sort-my-games">
                                                     <option>От большего количества участников к меньшему</option>
                                                     <option>Другое</option>
                                                     <option>Другое</option>
@@ -174,7 +174,7 @@
                                 <div>
                                     <h3>Тип игры</h3>
                                     <div>
-                                        <select>
+                                        <select class="tm-select-filter" name="select-filter-my-games">
                                             <option>Приватная</option>
                                             <option>Другая</option>
                                             <option>Другая</option>
