--- a/src/page-3.html
+++ b/src/page-3.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CryptoBets</title>
 
+    <!--LineAwesome-->
+    <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css">
+
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.26/css/uikit.min.css" />
 
@@ -59,6 +62,7 @@
 
                 <!--game-->
                 <div class="uk-border-rounded">
+
                     <!--game header-->
                     <div class="tm-box-small tm-background-top">
                         <div class="uk-flex-between uk-flex-middle" uk-grid>
@@ -67,7 +71,7 @@
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
-                                                <img src="images/icon-user.png" alt="">
+                                                <i class="fa fa-male" aria-hidden="true"></i>
                                             </div>
 
                                             <div>
@@ -93,7 +97,7 @@
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
-                                                <img src="images/icon-prize.png" alt="">
+                                                <i class="fa fa-gift" aria-hidden="true"></i>
                                             </div>
 
                                             <div>
@@ -106,7 +110,7 @@
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
-                                                <img src="images/icon-lock.png" alt="">
+                                                <i class="fa fa-unlock-alt" aria-hidden="true"></i>
                                             </div>
 
                                             <div>
@@ -167,7 +171,7 @@
                                         <li class="tm-connected">
                                             <div class="uk-flex uk-flex-between">
                                                 <div>Ожидаем игрока...</div>
-                                                <div><img src="images/icon-wait.svg" alt="" uk-svg></div>
+                                                <div><i class="fa fa-hourglass-start" aria-hidden="true"></i></div>
                                             </div>
                                         </li>
 
