--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -234,7 +234,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-open uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">2.4500<sup class="uk-text-uppercase">eth</sup></div>
@@ -256,7 +256,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0009<sup class="uk-text-uppercase">eth</sup></div>
@@ -278,7 +278,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.0000<sup class="uk-text-uppercase">eth</sup></div>
@@ -300,7 +300,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0500<sup class="uk-text-uppercase">eth</sup></div>
@@ -426,7 +426,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -448,7 +448,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-open uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">2.4500<sup class="uk-text-uppercase">eth</sup></div>
@@ -470,7 +470,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0009<sup class="uk-text-uppercase">eth</sup></div>
@@ -492,7 +492,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.0000<sup class="uk-text-uppercase">eth</sup></div>
@@ -514,7 +514,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0500<sup class="uk-text-uppercase">eth</sup></div>
@@ -536,7 +536,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -558,7 +558,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-open uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">2.4500<sup class="uk-text-uppercase">eth</sup></div>
@@ -580,7 +580,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0009<sup class="uk-text-uppercase">eth</sup></div>
@@ -602,7 +602,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.0000<sup class="uk-text-uppercase">eth</sup></div>
@@ -624,7 +624,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0500<sup class="uk-text-uppercase">eth</sup></div>
@@ -646,7 +646,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -668,7 +668,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-open uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">2.4500<sup class="uk-text-uppercase">eth</sup></div>
@@ -690,7 +690,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0009<sup class="uk-text-uppercase">eth</sup></div>
@@ -712,7 +712,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.0000<sup class="uk-text-uppercase">eth</sup></div>
@@ -734,7 +734,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0500<sup class="uk-text-uppercase">eth</sup></div>
