styling whitelist button 1

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,8 @@
 
                                 <div>
                                     <button type="button" class="tm-button-whitelist uk-button uk-button-default">
-                                        <i class="fa fa-plus uk-margin-right" aria-hidden="true"></i>
+                                        <i class="fa fa-plus" aria-hidden="true"></i>
+                                        <!--<img src="/images/plus-round.png" alt="" />-->
                                         Whitelist
                                     </button>
                                 </div>
