--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
                                             </div>
 
                                             <div>
-                                                <select class="tm-select-sort" name="select-sort-my-games">
+                                                <select class="tm-select-sort uk-select" name="select-sort-my-games">
                                                     <option>От большего количества участников к меньшему</option>
                                                     <option>Другое</option>
                                                     <option>Другое</option>
@@ -178,7 +178,7 @@
                                 <div>
                                     <h3>Тип игры</h3>
                                     <div>
-                                        <select class="tm-select-filter" name="select-filter-my-games">
+                                        <select class="tm-select-filter uk-select" name="select-filter-my-games">
                                             <option>Приватная</option>
                                             <option>Другая</option>
                                             <option>Другая</option>
@@ -354,7 +354,7 @@
                                             </div>
 
                                             <div>
-                                                <select>
+                                                <select class="tm-select-sort uk-select" name="select-sort-all-games">
                                                     <option>От большего количества участников к меньшему</option>
                                                     <option>Другое</option>
                                                     <option>Другое</option>
@@ -392,7 +392,7 @@
                                 <div>
                                     <h3>Тип игры</h3>
                                     <div>
-                                        <select>
+                                        <select class="tm-select-filter uk-select" name="select-filter-all-games">
                                             <option>Приватная</option>
                                             <option>Другая</option>
                                             <option>Другая</option>
